use 2 different min-width variables to solve the extra white space problem

--- a/src/components/BettingWidgets/ComplexBettingWidget/ComplexBettingWidget.less
+++ b/src/components/BettingWidgets/ComplexBettingWidget/ComplexBettingWidget.less
@@ -140,6 +140,7 @@ div.complex-betting {
       }
       &.lay-arrows-col {
         padding: 0 5px;
+        min-width: 20px;
       }
       &.back-arrows-col {
         padding:0 5px 0 2px;
